# Vlc-sdk-lib

./: .gitignore  MAVEN_PUBLISH.md  README.md  build.gradle  create-maven-bundle.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle  settings.gradle.kts  test-dependency.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
demo/: build.gradle  build.gradle.kts  proguard-rules.pro
demo/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libvlc/: AndroidManifest.xml  CMakeLists.txt  build.gradle  build.gradle.kts  project.properties  vlc命令行.txt
libvlc/include/: vlc_update.h  vlc_vout_wrapper.h
libvlc/jni/: libvlcjni-modules.c  libvlcjni-symbols.c
libvlc/jni/libs/armeabi-v7a/: gdb.setup
libvlc/jni/libs/mips/: gdbserver
libvlc/jni/libs/mips64/: gdb.setup  gdbserver
libvlc/jni/libs/x86/: gdb.setup
libvlc/src/main/: AndroidManifest.xml
libvlc/src/main/cpp/: CMakeLists.txt  libvlcjni-vlcobject.h  yyl_fixsurface.c  yyl_log.c  yyl_record.c
libvlc/src/main/cpp/demo/: yyl_fixsurface.c  yyl_rtsp.c  yyl_thumb.c
libvlc/src/main/cpp/include/: vlc_codecs.h  vlc_fourcc.h  vlc_intf_strings.h  vlc_vod.h
libvlc/src/main/java/com/vlc/lib/: RecordEvent.java  ThumbnailUtils.java  VlcPlayer.java  VlcVideoView.java
libvlc/src/main/java/com/vlc/lib/listener/: MediaListenerEvent.java  MediaPlayerControl.java  VideoSizeChange.java
libvlc/src/main/java/com/vlc/lib/listener/util/: LogUtils.java  VLCInstance.java  VLCOptions.java
libvlc/src/main/java/org/videolan/libvlc/: Media.java
libvlc/src/main/java/org/videolan/vlc/: RecordEvent.java  VlcPlayer.java  VlcVideoView.java
libvlc/src/main/java/org/videolan/vlc/listener/: VideoSizeChange.java
libvlc/src/main/java/org/videolan/vlc/util/: VLCInstance.java
libvlc/src/org/videolan/libvlc/: AWindow.java  AWindowNativeHandler.java  Dialog.java  IVLCVout.java  LibVLC.java  Media.java  MediaDiscoverer.java  MediaList.java  MediaPlayer.java  VLCEvent.java  VLCObject.java
libvlc/src/org/videolan/libvlc/media/: MediaPlayer.java  VideoView.java
libvlc/src/org/videolan/libvlc/util/: AndroidUtil.java  Dumper.java  Extensions.java  HWDecoderUtil.java  MediaBrowser.java  VLCUtil.java
libvlc/src/org/videolan/vlc/: VlcVideoPlayer.java  VlcVideoView.java
libvlc/src/org/videolan/vlc/listener/: MediaListenerEvent.java  MediaPlayerControl.java  VideoSizeChange.java
libvlc/src/org/videolan/vlc/media/: MediaWrapper.java
libvlc/src/org/videolan/vlc/util/: FileUtils.java  LogUtils.java  MurmurHash.java  Preferences.java  Strings.java  Util.java  VLCInstance.java  VLCOptions.java  VLCRunnable.java  WeakHandler.java
libvlc2.0.0/: AndroidManifest.xml  project.properties
libvlc2.0.6/: build.gradle  proguard-rules.pro
libvlc2.5.12/src/main/: AndroidManifest.xml
libvlc2.5.14/: build.gradle
libvlc2.5.14/src/main/: AndroidManifest.xml
libvlc2.5.17/: build.gradle
libvlc2.5.17/src/main/: AndroidManifest.xml
libvlc2.5.5/: .gitignore  build.gradle
libvlc3.0.2/: build.gradle
libvlc3.0.2/src/main/: AndroidManifest.xml
libvlc3.0.5/: build.gradle
libvlc3.0.6/: build.gradle
libvlc3.0.9/: build.gradle
libvlc3.0.9/include/: vlc_extensions.h
libvlc_/: AndroidManifest.xml  build.gradle
medialibrary/: medialibrary-release.aar
oldLibrary/libvlc2.0.0/: .gitignore  build.gradle
oldLibrary/libvlc2.0.6/: .gitignore  build.gradle
oldLibrary/libvlc2.5.12/: .gitignore  build.gradle
oldLibrary/libvlc2.5.5/: .gitignore
(+118 files in other folders)
